--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       retries: 5
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: sh -c "sleep 5 && python manage.py runserver 0.0.0.0:$PORT"
     volumes:
       - .:/code
     ports:
